fix: menu visibility bug

--- a/style.css
+++ b/style.css
@@ -306,6 +306,14 @@ input.form-item {
 /* Media Queries */
 
 @media only screen
+    and (min-width: 721px)
+{
+    nav{
+        display: block!important;
+    }
+}
+
+@media only screen
     and (max-width: 720px)
 {
     .menu {
